rwf-bin/src/ui/dialog/snapshot_tests/snapshots/rwf__ui__dialog__snapshot_tests__attr_timestamp_hidden_checked_120x40.snap
---
source: rwf-bin/src/ui/dialog/snapshot_tests/mod.rs
expression: "render_dialog_to_string(dialog, state, width, height)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 120, height: 40 },
    content: [
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                            ┌Change Attributes / Timestamps────────────────────────────────┐                            ",
        "                            │  Attributes                                                  │                            ",
        "                            │  [-] ReadOnly  [X] Hidden  [-] System  [-] Archive           │                            ",
        "                            │                                                              │                            ",
        "                            │  Timestamps                                                  │                            ",
        "                            │  Modified  <mixed>                                    [t:now]│                            ",
        "                            │  Accessed  <mixed>                                    [t:now]│                            ",
        "                            │  Created   <mixed>                                    [t:now]│                            ",
        "                            │                       [*OK*]  [Cancel]                       │                            ",
        "                            └──────────────────────────────────────────────────────────────┘                            ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 15, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 29, y: 15, fg: Black, bg: Gray, underline: Reset, modifier: BOLD,
        x: 59, y: 15, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 92, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 16, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 29, y: 16, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 31, y: 16, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 89, y: 16, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 91, y: 16, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 92, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 17, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 29, y: 17, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 31, y: 17, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 45, y: 17, fg: Black, bg: White, underline: Reset, modifier: NONE,
        x: 57, y: 17, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 89, y: 17, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 91, y: 17, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 92, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 18, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 29, y: 18, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 91, y: 18, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 92, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 19, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 29, y: 19, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 31, y: 19, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 89, y: 19, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 91, y: 19, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 92, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 20, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 29, y: 20, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 31, y: 20, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 48, y: 20, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 84, y: 20, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 92, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 21, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 29, y: 21, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 31, y: 21, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 48, y: 21, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 84, y: 21, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 92, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 22, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 29, y: 22, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 31, y: 22, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 48, y: 22, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 84, y: 22, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 92, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 23, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 92, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 24, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 92, y: 24, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
